@@ -72,6 +72,7 @@ class Path_walking_actor_action : public Actor_action
 	int original_dir;		// From src. to dest. (0-7).
 	int frame_index;		// Index within frame sequence.
 	int speed;			// Time between frames.
+	unsigned char from_offscreen;	// Walking from offscreen.
 	unsigned char blocked;		// Blocked-tile retries.
 	unsigned char max_blocked;	// Try this many times.
 	unsigned char blocked_frame;	// Frame for blocked tile.
@@ -148,6 +149,22 @@ public:
 	Frames_actor_action(char *f, int c, int spd = 200);
 	virtual ~Frames_actor_action()
 		{ delete [] frames; }
+					// Handle time event.
+	virtual int handle_event(Actor *actor);
+	};
+
+/*
+ *	Call a usecode function.
+ */
+class Usecode_actor_action : public Actor_action
+	{
+	int fun;			// Fun. #.
+	Game_object *item;		// Call it on this item.	
+	int eventid;
+public:
+	Usecode_actor_action(int f, Game_object *i, int ev)
+		: fun(f), item(i), eventid(ev)
+		{  }	
 					// Handle time event.
 	virtual int handle_event(Actor *actor);
 	};
