@@ -1,3 +1,7 @@
+2000-10-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc: Working on theft.  Also messed with pathfinding.
+
 2000-09-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 
 	* exult.cc, usecode.cc: location marker on map changed to yellow
